syntax = "proto3";

package dealership;

option go_package = "dealership/dealership";

service DealershipService {

}

message DealershipInfo {
  string id = 1;
  string name = 2;
  string address = 3;
  string phone = 4;
  string email = 5;
  repeated string working_hours = 6;
}

message GetDealershipInfoRequest {
  string dealership_id = 1;
}

message ListDealershipsRequest {
  string page_size = 1;
  string page_number = 2;
}

message ListDealershipsResponse {
  repeated DealershipInfo dealership = 1;
  int32 total_dealerships = 2;
}

message Reservation {
  string id = 1;
  string customer_id = 2;
  string car_id = 3;
  string dealership_id = 4;
  string status = 5;
  string reservation_date = 6;
  string expiration_date = 7;
}

message CreateReservationRequest {
  string customer_id = 1;
  string car_id = 2;
  string dealership_id = 3;
}

message GetReservationRequest {
  string reservation_id = 1;
}

message CancelReservationRequest {
  string reservation_id = 1;
}

message ListAvailableCarsRequest {
  string dealership_id = 1;
  int32 page_size = 2;
  int32 page_number = 3;
}

message Car {
  string id = 1;
  string make = 2;
  string  model = 3;
  int32 year = 4;
  string color = 5;
  double price = 6;
}